--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="Brothers Tegucigalpa"
-      content="La mejor forma de aprender es haciendo, enfrentando problemas reales en entornos reales y de manera compartida"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#272727" />
+		<meta
+		name="Brothers Tegucigalpa"
+		content="La mejor forma de aprender es haciendo, enfrentando problemas reales en entornos reales y de manera compartida"
+		/>
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<!--
+		manifest.json provides metadata used when your web app is installed on a
+		user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+		-->
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<!--
+		Notice the use of %PUBLIC_URL% in the tags above.
+		It will be replaced with the URL of the `public` folder during the build.
+		Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Brother Tegucigalpa</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+		Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+		work correctly both with client-side routing and a non-root public URL.
+		Learn how to configure a non-root public URL by running `npm run build`.
+		-->
+		<title>Brother Tegucigalpa</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<style>
+		.preloader {
+			transition: all 0.3s ease;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100vw;
+			height: 100vh;
+			position: fixed;
+			top: 0;
+			left: 0;
+			z-index: 1030;
+			background-color: #272727;
+			color: white;
+		}
+		.preloader.hidden {
+			opacity: 0;
+			pointer-events: none;
+		}
+		.preloader i {
+			color: white;
+		}
+		</style>
+	</head>
+	<body>
+			<noscript>You need to enable JavaScript to run this app.</noscript>
+			<div id="root"></div>
+			<div class="preloader" id="preloader">
+				<i class="fa fa-circle-o-notch fa-spin fa-2x" aria-hidden="true"></i>
+			</div>
+			<!--
+				This HTML file is a template.
+				If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+				You can add webfonts, meta tags, or analytics to this file.
+				The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+				To begin the development, run `npm start` or `yarn start`.
+				To create a production bundle, use `npm run build` or `yarn build`.
+			-->
+			<script>
+				
+				window.addEventListener("DOMContentLoaded", function(){
+					setTimeout(()=>{
+						let preloader = document.getElementById("preloader");
+						  preloader.classList.add("hidden");
+					}, 200);
+				});
+			</script>
+	</body>
 </html>
