--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 		Learn how to configure a non-root public URL by running `npm run build`.
 		-->
 		<title>Brother Tegucigalpa</title>
-		<link rel="preload" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<style>
 		.preloader {
 			transition: all 0.3s ease;
@@ -51,28 +51,28 @@
 		</style>
 	</head>
 	<body>
-			<noscript>You need to enable JavaScript to run this app.</noscript>
-			<div id="root"></div>
-			<div class="preloader" id="preloader">
-				<i class="fa fa-circle-o-notch fa-spin fa-2x" aria-hidden="true"></i>
-			</div>
-			<!--
-				This HTML file is a template.
-				If you open it directly in the browser, you will see an empty page.
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+		<div class="preloader" id="preloader">
+			<i class="fa fa-circle-o-notch fa-spin fa-2x" aria-hidden="true"></i>
+		</div>
+		<!--
+			This HTML file is a template.
+			If you open it directly in the browser, you will see an empty page.
 
-				You can add webfonts, meta tags, or analytics to this file.
-				The build step will place the bundled scripts into the <body> tag.
+			You can add webfonts, meta tags, or analytics to this file.
+			The build step will place the bundled scripts into the <body> tag.
 
-				To begin the development, run `npm start` or `yarn start`.
-				To create a production bundle, use `npm run build` or `yarn build`.
-			-->
-			<script>
-				window.addEventListener("DOMContentLoaded", function(){
-					setTimeout(()=>{
-						let preloader = document.getElementById("preloader");
-						  preloader.classList.add("hidden");
-					}, 200);
-				});
-			</script>
+			To begin the development, run `npm start` or `yarn start`.
+			To create a production bundle, use `npm run build` or `yarn build`.
+		-->
+		<script>
+			window.addEventListener("DOMContentLoaded", function(){
+				setTimeout(()=>{
+					let preloader = document.getElementById("preloader");
+						preloader.classList.add("hidden");
+				}, 200);
+			});
+		</script>
 	</body>
 </html>
